// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ProgressStep /> > should match the snapshot for 8 items 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="SliderProgress_root__17uw35s0"
    style="grid-template-columns: repeat(8, 1fr);"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_passed__15qfq7e6"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_white__onxwju5f ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
  </div>
</div>
`;

exports[`<ProgressStep /> > should match the snapshot with custom background 1`] = `
<div
  class="theme_OD_Base__j49br80"
  data-od-component="provider"
>
  <div
    class="SliderProgress_root__17uw35s0"
    style="grid-template-columns: repeat(3, 1fr);"
  >
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_yellow500__onxwju51 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_yellow500__onxwju51 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_passed__15qfq7e6"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_yellow500__onxwju51 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_yellow500__onxwju51 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3 ProgressStep_active__15qfq7e4"
        style="animation-duration: 1s;"
      />
    </div>
    <div
      class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_position_relative_mobile__onxwju8h SliderProgress_step__17uw35s1"
    >
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_block_mobile__onxwju6d sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_yellow500__onxwju51 ProgressStep_item__15qfq7e2 ProgressStep_empty__15qfq7e0"
      />
      <div
        class="elementReset_resetVariants__18vhvlid elementReset_resetVariants_as_div__18vhvlie elementReset_block__18vhvli4 sprinkles_display_none_mobile__onxwju69 sprinkles_position_absolute_mobile__onxwju8l sprinkles_backgroundColour_yellow500__onxwju51 ProgressStep_item__15qfq7e2 ProgressStep_fill__15qfq7e3"
        style="animation-duration: 1s;"
      />
    </div>
  </div>
</div>
`;
